# simpleCalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: lexer.l  main.cpp  parser.y
