CMAKE_MINIMUM_REQUIRED (VERSION 3.13)

SET (CMAKE_CXX_STANDARD 17)

PROJECT (simpleCalc)

# Project settings
SET (SIMPLECALC_BUILD_TARGET "simpleCalc")

# Libraries
FIND_PACKAGE (BISON)
FIND_PACKAGE (FLEX)

# Source
SET (SIMPLECALC_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (SIMPLECALC_PARSER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/parser)

FILE (GLOB_RECURSE SIMPLECALC_SRC_FILES ${SIMPLECALC_SRC_DIR}/*.cpp)

FILE (MAKE_DIRECTORY ${SIMPLECALC_PARSER_DIR})
BISON_TARGET (SIMPLECALC_PARSER ${SIMPLECALC_SRC_DIR}/parser.y ${SIMPLECALC_PARSER_DIR}/parser.cpp)
FLEX_TARGET (SIMPLECALC_SCANNER ${SIMPLECALC_SRC_DIR}/lexer.l ${SIMPLECALC_PARSER_DIR}/lexer.cpp)
ADD_FLEX_BISON_DEPENDENCY (SIMPLECALC_SCANNER SIMPLECALC_PARSER)

INCLUDE_DIRECTORIES (${SIMPLECALC_PARSER_DIR})

ADD_EXECUTABLE (${SIMPLECALC_BUILD_TARGET}
    ${SIMPLECALC_SRC_FILES}
    ${BISON_SIMPLECALC_PARSER_OUTPUTS}
    ${FLEX_SIMPLECALC_SCANNER_OUTPUTS}
)
